Fix :hover styles on mobile

--- a/app/assets/stylesheets/containers.css
+++ b/app/assets/stylesheets/containers.css
@@ -117,8 +117,10 @@
   }
 }
 
-a.formatted-list__item:hover {
-  background: var(--color-surface);
+@media (hover: hover) and (pointer: fine) {
+  a.formatted-list__item:hover {
+    background: var(--color-surface);
+  }
 }
 
 .formatted-list--top-level {
